--- a/api/package.json
+++ b/api/package.json
@@ -6,10 +6,13 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
-    "hono": "^4.6.20"
+    "@prisma/client": "^6.3.1",
+    "hono": "^4.6.20",
+    "ioredis": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "prisma": "^6.3.1",
     "tsx": "^4.7.1"
   }
 }
