--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,11 @@
   "scripts": {
     "dev": "tsx watch src/index.ts"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
+    "@faker-js/faker": "^9.4.0",
     "@hono/node-server": "^1.13.8",
     "@prisma/client": "^6.3.1",
     "hono": "^4.6.20",
@@ -13,6 +17,7 @@
   "devDependencies": {
     "@types/node": "^20.11.17",
     "prisma": "^6.3.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.7.1"
   }
 }
