--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "@hookform/resolvers": "^3.10.0",
     "@next/font": "^14.2.15",
     "@tanstack/react-query": "^5.66.0",
+    "@types/luxon": "^3.4.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
+    "luxon": "^3.5.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
