--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,8 @@
   "name": "api",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "test": "jest --detectOpenHandles"
   },
   "prisma": {
     "seed": "node --loader ts-node/esm prisma/seed.ts"
@@ -11,12 +12,19 @@
     "@faker-js/faker": "^9.4.0",
     "@hono/node-server": "^1.13.8",
     "@prisma/client": "^6.3.1",
+    "@types/jest": "^29.5.14",
+    "dotenv": "^16.4.7",
     "hono": "^4.6.20",
-    "ioredis": "^5.5.0"
+    "ioredis": "^5.5.0",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "@types/supertest": "^6.0.2",
     "prisma": "^6.3.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2"
   }
