--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,8 @@
     "ioredis": "^5.5.0",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
